Replace sun.misc.BASE64Decoder with org.apache.commons.codec.binary.Base64.
git-svn-id: https://svn.apache.org/repos/asf/logging/log4j/log4j2/trunk@1597606 13f79535-47bb-0310-9956-ffa450edef68